--- a/WpfClient/App.xaml
+++ b/WpfClient/App.xaml
@@ -1,9 +1,13 @@
 ﻿<Application x:Class="WpfClient.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfClient"
+           
+               xmlns:viewModel="clr-namespace:WpfClient.ViewModel"
+             xmlns:v="clr-namespace:WpfClient.Views"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <DataTemplate DataType="{x:Type viewModel:MainViewModel}">
+            <v:ViewMain/>
+        </DataTemplate>
     </Application.Resources>
 </Application>
