--- a/WpfServer/Views/MainView.xaml
+++ b/WpfServer/Views/MainView.xaml
@@ -1,23 +1,24 @@
 ﻿<UserControl
     x:Class="WpfServer.Views.MainView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfServer"
-        mc:Ignorable="d"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+ 
+    xmlns:local="clr-namespace:WpfServer"
+    mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
-     
+
         <Style x:Key="TextErrorStyle" TargetType="{x:Type TextBox}">
             <Setter Property="Validation.ErrorTemplate">
                 <Setter.Value>
                     <ControlTemplate x:Name="TextErrorTemplate">
                         <DockPanel LastChildFill="True">
                             <AdornedElementPlaceholder>
-                                <Border BorderBrush="Red" BorderThickness="2"/>
+                                <Border BorderBrush="Red" BorderThickness="2" />
                             </AdornedElementPlaceholder>
-                            
+
                         </DockPanel>
                     </ControlTemplate>
                 </Setter.Value>
@@ -25,42 +26,57 @@
             <Style.Triggers>
                 <Trigger Property="Validation.HasError" Value="True">
                     <!--<Setter Property="Background" Value="Red"/>-->
-                    <Setter Property="ToolTip" Value="{Binding RelativeSource={x:Static RelativeSource.Self},Path=(Validation.Errors)[0].ErrorContent}"></Setter>
+                    <Setter Property="ToolTip"
+                            Value="{Binding RelativeSource={x:Static RelativeSource.Self},Path=(Validation.Errors)[0].ErrorContent}" />
                 </Trigger>
             </Style.Triggers>
         </Style>
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-<Border BorderThickness="5" Margin="2" Grid.Row="0" BorderBrush="Black">
-    <StackPanel>
-        <StackPanel Margin="5" Orientation="Horizontal">
+        <Border BorderThickness="5" Margin="2" Grid.Row="0" BorderBrush="Black">
+            <StackPanel>
+                <StackPanel Margin="5" Orientation="Horizontal">
 
-                   
+
                     <Label Margin="5" Target="{Binding ElementName=TextBoxPort}">port</Label>
-                        <TextBox  Margin="5" x:Name="TextBoxPort" Text="{Binding Port,  ValidatesOnNotifyDataErrors=True,UpdateSourceTrigger=PropertyChanged}"  Style="{StaticResource TextErrorStyle}" Width="50"></TextBox>
+                    <TextBox Margin="5" x:Name="TextBoxPort"
+                             Text="{Binding Port,  ValidatesOnNotifyDataErrors=True,UpdateSourceTrigger=PropertyChanged}"
+                             Style="{StaticResource TextErrorStyle}" Width="50" />
 
                 </StackPanel>
-    <StackPanel Margin="5" Orientation="Horizontal">
+                <StackPanel Margin="5" Orientation="Horizontal">
 
+                    <ToggleButton Command="{Binding ConnectCommand}" Content="Connect"
+                                  CommandParameter="{Binding IsChecked,RelativeSource={RelativeSource Self}}"/>
+                    <!--<Button Margin="5" x:Name="ButtonConnect" Command="{Binding ConnectCommand}">Start Server</Button>-->
 
-                    <Button Margin="5" x:Name="ButtonConnect"  Command="{Binding ConnectCommand}">Start Server</Button>
-
-      </StackPanel>
-    </StackPanel>
+                </StackPanel>
+            </StackPanel>
         </Border>
         <Border BorderThickness="5" Margin="2" Grid.Row="1" BorderBrush="Black">
-        <TabControl Grid.Row="1" Margin="5">
-            <TabItem Header="Log" Name="Log">
-                <ListBox x:Name="ListBoxLog"></ListBox>
-            </TabItem>
-            <TabItem Header="Messages" Name="Messages" >
-                <ListBox x:Name="ListBoxMessages"></ListBox>
-            </TabItem>
-        </TabControl>
-          </Border>
+            <TabControl Grid.Row="1" Margin="5">
+
+                <TabItem Header="Messages" Name="Messages">
+                    <ListView x:Name="ListBoxMessages" ItemsSource="{Binding Messages}">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <WrapPanel>
+                                    <TextBlock Text="Name: " />
+                                    <TextBlock Text="{Binding Message}" FontWeight="Bold" />
+
+                                </WrapPanel>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </TabItem>
+                <TabItem Header="Log" Name="Log">
+                    <ListView x:Name="ListBoxLog" ItemsSource="{Binding Logs}" />
+                </TabItem>
+            </TabControl>
+        </Border>
     </Grid>
 </UserControl>
